# LLM_RLHF

./: .gitignore  CLAUDE.MD  README.md  logs_dpo.txt  logs_grpo.txt  logs_pairs.txt  logs_ppo.txt  logs_rm.txt  logs_sft.txt  pipeline_outputs.json  pyproject.toml  tutorial.ipynb
configs/: default.toml  dpo.toml  grpo.toml  ppo.toml  reward.toml  sft.toml
notebooks/: 00_walkthrough.ipynb  00b_policy_gradient_intuition.ipynb  01_pretrained.ipynb  02_sft.ipynb  03_reward_model.ipynb  04_ppo.ipynb  05_dpo.ipynb  06_grpo.ipynb
scripts/: run_pipeline.py
src/llm_rlhf/: __init__.py  config.py  dpo.py  eval.py  grpo.py  highway.py  model.py  reward.py  sft.py  utils.py
src/llm_rlhf/ppo/: __init__.py  losses.py  model.py  trainer.py
