[project]
name = "llm-rlhf"
version = "0.1.0"
description = "Educational, modular RLHF pipeline on small LLMs: SFT → Reward Model → PPO / DPO / GRPO"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Core numerics (torch is in cpu/gpu groups below)
    "numpy>=1.26",

    # Hugging Face stack
    "transformers>=4.44",
    "tokenizers>=0.19",
    "accelerate>=0.33",
    "datasets>=2.20",
    "peft>=0.12",
    "safetensors>=0.4",

    # Utilities
    "tqdm>=4.66",
    "rouge-score>=0.1.2",
    "wandb>=0.17",

    # Plotting / data handling for notebooks
    "matplotlib>=3.8",
    "pandas>=2.2",
    "pyarrow>=15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ruff>=0.6",
]
cpu = [
    "torch>=2.2",
]
gpu = [
    "torch>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_rlhf"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", group = "gpu" },
  { index = "pytorch-cpu", group = "cpu" },
]

[tool.uv]
conflicts = [
  [{ group = "cpu" }, { group = "gpu" }],
]
